--- a/display/wod5e-styling.css
+++ b/display/wod5e-styling.css
@@ -1426,13 +1426,18 @@ body.uk .actor.sheet {
   margin-left: auto;
   margin-right: auto;
 }
-.actor.sheet .equipment-notes {
+.actor.sheet .tab[data-tab="equipment"] .equipment-notes {
+  max-width: 400px;
   margin-left: 10px;
   margin-right: 10px;
   align-self: flex-start;
 }
-.actor.sheet .equipment-notes .field-header {
+.actor.sheet .tab[data-tab="equipment"] .equipment-notes .field-header {
   font-size: 16pt;
+}
+.actor.sheet .tab[data-tab="equipment"] .equipment-list .category {
+  margin-left: auto;
+  margin-right: auto;
 }
 .actor.sheet .tab[data-tab="biography"] .detailed-section {
   display: inline-flex;
